--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 
 <p>Test component - green button</p>
 
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FjlXtbV3ub9OEnKlHhB31NW%2Fhello" allowfullscreen></iframe>
+
 </body>
 </html>
