--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FjlXtbV3ub9OEnKlHhB31NW%2Fhello" allowfullscreen></iframe>
 
-<div style="position:relative;padding-top:56.25%;">
-    <iframe src='https://dartpad.dev/embed-flutter.html?id=c1c89e3c1726d8cdefc99a684aa115db' style="position:absolute;top:0;left:0;width:100%;height:100%;">.       </iframe>
-</div>
-
-<a href="/green_button_flutter/green_button.html">Link to green button</a>
+<iframe src="green_button_flutter/green_button.html" style="width:100%; height:400px;"></iframe>
 
 </body>
 </html>
